Bug 1249710: fix unit mismatch calculating scroll range during async scrollbar drag r=botond

When calculating the max scroll position, the size of mCompositionBounds is
subtracted from the size of mScrollableRectangle. Unfortunately, the former is
in ParentLayer units and the latter is in CSS units. This causes the final
scroll position to become staggered relative to the mouse when user zoom is not
100%.

Use cssCompositionBounds, mCompositionBounds transformed to CSSRect, which
changes based on zoom. Additionally, refactor GetAxis* functions to return
typed units, where possible.

MozReview-Commit-ID: Ec9cOMP1cdT